# rag_pdfs

./: README.md  main.py  pyproject.toml  requirements.txt
api/: dependencies.py  models.py
api/v1/: routes.py
configs/: __init__.py  app_settings.py  rag_configs.py
data/indexes/: bm25_retriever.pkl  documents.pkl
data/indexes/faiss_index/: index.faiss  index.pkl
data_processing/: base.py  loader.py  loader_factory.py  splitters.py
llm/: base.py  client.py  mistral.py  openai.py
rag/: models.py  orchestrator.py  prompt_templates.py  utils.py
vector_store/: faiss_store.py  vector_store.py
