# pyproject.toml
[tool.poetry]
name = "medrag-assistant"
version = "0.1.0"
description = "RAG system for medical equipment support"
authors = ["bayanistnahtc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
# TODO: Will add specific ML dependencies as we implement features
# NOTE: Starting minimal, will expand based on actual needs
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "2.11.7"
pydantic-settings = "2.10.1"
sqlalchemy = "2.0.41"
alembic = "1.16.2"
langchain-community = "0.3.27"
pypdf = "5.7.0"
langchain-huggingface = "0.3.0"
sentence-transformers = "5.0.0"
langchain-core = "0.3.67"
faiss-cpu = "1.11.0"
rank-bm25 = "0.2.2"
langchain-mistralai = "0.2.10"
pymupdf = "1.26.3"
loguru = "^0.6.0"
python-dotenv = "^0.19.0"
mypy = "^0.982"
prometheus-client = "^0.14.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^3.0.0"
pytest-mock = "^3.8.2"
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^0.982"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
